# pycounter

pycounter/: LICENSE  README.md  pyproject.toml
pycounter/docs/: conf.py  example.ipynb
pycounter/tests/: test_pycounter.py
