[tool.poetry]
name = "pycounter"
version = "0.1.0"
description = "Calculate the words in a text file."
authors = ["Gilbert Akuja"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
